fix add group div spacing

--- a/meetbd/src/newstyles.css
+++ b/meetbd/src/newstyles.css
@@ -183,6 +183,7 @@ input {
     border-width: 3px;
     margin-left: auto;
     margin-right: auto;
+    max-width: 400px;
     padding: 15px;
     text-align: center;
     width: 80%;
@@ -192,8 +193,13 @@ input {
     margin-top: 1rem;
 }
 
+.add-group form {
+    display: flex;
+    justify-content: space-around;
+}
+
 .group-around {
-    margin: 15px;
+    margin-top: 15px;
 }
 
 .group {
